[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sand wisp.png" type="Texture" id=1]
[ext_resource path="res://scenes/wisps/WispSand.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 10.0

[node name="WispSand" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="TerrainTimer" type="Timer" parent="."]
wait_time = 4.23

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="TerrainTimer" to="." method="_on_TerrainTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
